--- a/index.html
+++ b/index.html
@@ -15,8 +15,7 @@
 		<section class="intro">
 			<div class="container">
 				<h2>About me.</h2>
-				<img src="profile.jpg" alt="Diele" width="180" height="180">
-				<p>{{ site.description }}</p>
+				<img src="profile.jpg" alt="Diele" width="150" height="150" ALIGN=”right” alt=" {{ site.description" }}
 			</div>
 		</section>
 		<section class="projects">
