--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
 		<section class="intro">
 			<div class="container">
 				<h2>About me.</h2>
-				<img src="profile.jpg" alt="Diele" width="150" height="150" ALIGN=”right” alt=" {{ site.description" }}
+				<img src="profile.jpg" alt="Diele" width="150" height="150" align=”left” style=”margin: 0px 10px 0px 0px;/>
+				<p>{{ site.description }}</p>
 			</div>
 		</section>
 		<section class="projects">
