--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
 		<section class="intro">
 			<div class="container">
 				<h2>About me.</h2>
-				<img src="profile.jpg" alt="{{ site.description }}" class="left" />
+				<img src="profile.jpg" alt="Diele" width="90" height="90" style="float:left"/>
+				<p> {{ site.description }}</p>
 			</div>
 		</section>
 		<section class="projects">
