--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 		<section class="intro">
 			<div class="container">
 				<h2>About me.</h2>
-				<img src="profile.jpg" alt="Diele" width="90" height="90" style="float:left"/>
+				<img src="profile.jpg" alt="Diele" width="120" height="120" style="float:left; margin-left:15px;"/>
 				<p> {{ site.description }}</p>
 			</div>
 		</section>
