--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	<main class="content">
 		<section class="intro">
 			<div class="container">
-				<h2>About me.</h2>
+				<h2>About me</h2>
 				<img src="profile.jpg" alt="Diele" width="150" height="150" style="float:left; margin-right:15px;"/>
 				<p> {{ site.description }}</p>
 			</div>
